--- a/css/font-settings.css
+++ b/css/font-settings.css
@@ -106,34 +106,34 @@ p.flavor-text {
     font-style: italic;
 }
 
-div.text-box.bigger-text>p.rules-text,
-div.text-box.bigger-text>p.saga-chapter,
-div.text-box.bigger-text>p.flavor-text {
-    font-size: calc(var(--rules-font-size) * 1.1);
+div.text-box.big-text>p.rules-text,
+div.text-box.big-text>p.saga-chapter,
+div.text-box.big-text>p.flavor-text {
+    font-size: calc(var(--text-font-size) / 0.90);
 }
 
 div.text-box.normal-text>p.rules-text,
 div.text-box.normal-text>p.saga-chapter,
 div.text-box.normal-text>p.flavor-text {
-    font-size: var(--rules-font-size);
+    font-size: var(--text-font-size);
 }
 
 div.text-box.small-text>p.rules-text,
 div.text-box.small-text>p.saga-chapter,
 div.text-box.small-text>p.flavor-text {
-    font-size: calc(var(--rules-font-size) * 0.9);
+    font-size: calc(var(--text-font-size) * 0.9);
 }
 
 div.text-box.smaller-text>p.rules-text,
 div.text-box.smaller-text>p.saga-chapter,
 div.text-box.smaller-text>p.flavor-text {
-    font-size: calc(var(--rules-font-size) * 0.8);
+    font-size: calc(var(--text-font-size) * 0.9 * 0.9);
 }
 
 div.text-box.smallest-text>p.rules-text,
 div.text-box.smallest-text>p.saga-chapter,
 div.text-box.smallest-text>p.flavor-text {
-    font-size: calc(var(--rules-font-size) * 0.7);
+    font-size: calc(var(--text-font-size) * 0.9 * 0.9 * 0.9);
 }
 
 span.reminder {
